--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hellow world
+
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>welcome to my Page</h2>
+<img src = "download.jpg" alt="my dream car">
+<p>hellow world
+this is my website</p>
+</body>
+</html>
+
+
